# topology_classification

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_mac_arm.txt
notebooks/: README.md
notebooks/dl/: CNN_network.ipynb  MLP_network.ipynb  MLP_network_different_N.ipynb
notebooks/ml/: SVM_different_N.ipynb  ml_methods.ipynb
utils/: dl_models.py  utils.py
